change design of index.html and scss

--- a/laravel/resources/sass/app.scss
+++ b/laravel/resources/sass/app.scss
@@ -1,1 +1,15 @@
-//
+.wrapper {
+  display: flex;
+  height: 100vh;
+}
+
+.main {
+  width: 100vw;
+  background-color: #1a1d21;
+  h1 {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    margin: 0 auto;
+  }
+}
