--- a/laravel/resources/views/linebot/index.html
+++ b/laravel/resources/views/linebot/index.html
@@ -5,6 +5,10 @@
   <title>laravel-linebot</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <div class="wrapper">
+    <div class="main">
+      <h1>Laravel-LINEBot</h1>
+    </div>
+  </div>
 </body>
 </html>
