--- a/laravel/resources/views/linebot/index.html
+++ b/laravel/resources/views/linebot/index.html
@@ -7,7 +7,8 @@
 <body>
   <div class="wrapper">
     <div class="main">
-      <h1>Laravel-LINEBot</h1>
+      <h1>Laravel-Restaurants-LINEbot</h1>
+      <h3>・LINEアプリで投稿→ぐるなび飲食店検索→LINEアプリで検索結果表示</h3>
     </div>
   </div>
 </body>
